--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,3 +1,4 @@
+
 html {
   scroll-behavior: smooth;
 }
@@ -43,6 +44,48 @@ body, html, main {
   text-decoration: none;
   }
 
+
+  .Headline{
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    text-align: center;
+    letter-spacing: 7px;
+  }
+
+  .Headline-mini{
+    color: rgb(255, 255, 255);
+    font-size: 80px;
+    text-align: center;
+    letter-spacing: 10px;
+  }
+  
+  .head-padding{
+    padding: 70px 70px 0 0;
+  }
+
+.fade-in-bottom {
+    opacity: 0;
+    animation-name: fadein-bottom;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadein-bottom {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animation-start{
+  animation-delay: 0.5s;
+}
+
 .cd-fixed-bg {
   min-height: 100vh;
   background-size: cover;
@@ -79,6 +122,10 @@ background-image: url("home-main-image.png");
   padding: 40px 200px;
 }
 
+.profile-textbox{
+  padding: 40px 250px;
+}
+
 .about{
   color: rgb(156, 140, 85);
   font-size: 60px;
@@ -91,6 +138,11 @@ background-image: url("home-main-image.png");
   justify-content: space-between;
 }
 
+.connect-center{
+  display: flex;
+  justify-content: center;
+}
+
 .english-name{
   font-size: 30px;
   padding-top: 30px;
@@ -101,3 +153,46 @@ background-image: url("home-main-image.png");
   font-size: 16px;
   letter-spacing: 5px;
 }
+
+
+
+
+
+.item-lists {
+  width: 100vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+
+
+.item-lists>.list {
+  padding: 1vw;
+  width: 25%;
+  text-align: center;
+}
+
+.item-img{
+  height: 250px;
+}
+
+.contact-textbox{
+  display: flex;
+}
+
+.twitter-icon{
+  height: 40px;
+  padding-top: 25px;
+}
+
+.contact-text{
+  font-size: 20px;
+  letter-spacing: 5px;
+  margin: 30px 0 0 20px;
+}
+
+
+
+
+
