--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -81,8 +81,9 @@
                         <%= link_to "https://jewel-33511.herokuapp.com/", class: "default_link_none", target: :_blank do %>
                             <%= image_tag "image2.png", class: "item-img" %>
                                 <div class="hover-text">
-                                    <p class="text1">FRIMA</p>
-                                    <p class="text2">手軽に使えるフリマサイト！</p>
+                                    <p class="text1">FURIMA</p>
+                                    <p class="text2">手軽に使えるフリマサイト！<br>
+                                    プログラミングスクール最終課題</p>
                                 </div>
                         <% end %>
                     </div>
